# mai_web

./: .gitignore  README.md  add_data.py  db.py  deploy.txt  main.py  migrate.py  pyproject.toml  requirements.txt  route.py  run.bat  run.py  todo.txt
mai/: __init__.py  __main__.py  admin.py  auth.py  config.py  database.py  form.py  views.py
mai/templates/: add_goods.html  base.html  goods.html  goods_list.html  index.html  login.html  my_goods.html  my_message.html  my_sent_message.html  readme.html  register.html  transaction.html  upload.html  user.html  view_goods.html
templates/: goods.html  index.html  login.html  user.html
