
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "Bootstrap-Flask>=2.3.0",
    "Flask>=3.0.0",
    "Flask-Admin>=1.6.1",
    "Flask-Login>=0.6.2",
    "Flask-Migrate>=3.1.0",
    "Flask-WTF>=1.2.1",
    "Flask-SQLAlchemy>=3.1.1",
    "Pillow>=10.0.1",
    "faker>=21.0.0",
]
requires-python = ">3.9"
name = "mai_web"
version = "0.1.0"
description = "study and test on Flask"
authors = [
    {name = "wp", email = "wpwupingwp@outlook.com"},
]
readme = "README.md"
license = {text = "AGPL"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
