[project]
name = "mai_web"
version = "0.1.0"
description = "flask project"
authors = [
    {name = "wp", email = "wpwupingwp@outlook.com"},
]
dependencies = [
    "flask==3.0.0",
    "pillow==10.1.0",
    "bootstrap-flask==2.3.3",
    "faker==21.0.0",
    "flask-admin==1.6.1",
    "flask-login==0.6.3",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
]
requires-python = ">3.10"
readme = "README.md"
license = {text = "AGPL-3"}


[tool.pdm]
distribution = false
